--- a/css/1.css
+++ b/css/1.css
@@ -13,7 +13,7 @@ header {
     float: left;
     width: 2.1rem;
     height: .62rem;
-    background: url(../Layer-15.png) no-repeat;
+    background: url(layer-15.png) no-repeat;
     background-size: contain;
     margin: .25rem 0 0 .16rem;
 }
